# ManimGeo

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-test.yml
docs/: .gitignore
docs/source/: conf.py  help.md  index.md  requirements.txt
docs/source/anime/: index.md  janim_manager.md  manimgl_manager.md
docs/source/apidoc/: index.md  manimgeo.anime.janim.error_func.rst  manimgeo.anime.janim.janim_manager.rst  manimgeo.anime.janim.rst  manimgeo.anime.manager.rst  manimgeo.anime.manimgl.error_func.rst  manimgeo.anime.manimgl.manimgl_manager.rst  manimgeo.anime.manimgl.rst  manimgeo.anime.rst  manimgeo.anime.state.rst  manimgeo.components.angle.adapter.rst  manimgeo.components.angle.angle.rst  manimgeo.components.angle.args.rst  manimgeo.components.angle.construct.rst  manimgeo.components.angle.rst  manimgeo.components.base.base_adapter.rst  manimgeo.components.base.base_argsmodel.rst  manimgeo.components.base.base_geometry.rst  manimgeo.components.base.base_pydantic.rst  manimgeo.components.base.rst  manimgeo.components.circle.adapter.rst  manimgeo.components.circle.args.rst  manimgeo.components.circle.circle.rst  manimgeo.components.circle.construct.rst  manimgeo.components.circle.rst  (+40 more)
src/ManimGeo.egg-info/: PKG-INFO  SOURCES.txt
src/manimgeo/: __init__.py
tests/: test.py  test_classical_geometry.py  test_simple.py  test_simple2.py
tests/janim_anime/: abtc.py  construct_1.py  euler_line.py  tan.py
tests/manimgl_anime/: anime.py  demo_3b1b.py  euler_line.py  nine_points_circle.py  pedal_triagle.py  shape257.py
tests/test_e2e/: test_classical_geometry.py  test_euler_line.py  test_inversion.py  test_nine_point_circle.py  test_simple2.py  test_simple_1.py  test_simson_line.py
tests/test_manimgl_anime/: anime.py
tests/test_units/: test_point.py
(+109 files in other folders)
