[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ManimGeo"
version = "1.0.1"
description = "A library for Geometry constructing and animation generating."
authors = [
    { name = "lifecheckpoint", email = "lifechpt@qq.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    # "manim>=0.17.0"
]

[tool.setuptools.packages.find]
where = ["src"]
