[project]
name = "manimgeo"
version = "1.3.0"
description = "A library for Geometry constructing and animation generating."
authors = [
    { name = "lifecheckpoint", email = "lifechpt@qq.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
manim = [
    "manimgl>=1.7.2",
]
janim = [
    "janim>=3.4.0",
    "janim[gui]>=3.4.0",
]
dev = [
    "pytest>=8.4.1",
    "sphinx>=8.2.3",
    "myst-parser>=4.0.1",
    "sphinx-rtd-theme>=3.0.2",
]
full = [
    "manimgeo[manim]",
    "manimgeo[janim]",
    "manimgeo[dev]",
]

[project.urls]
Homepage = "https://github.com/LifeCheckpoint/ManimGeo"
